--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h3>| &nbsp;&nbsp; FROM <strong>DESPICABLE ME 2</strong> &nbsp;&nbsp; |</h3>
 
-        <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
 
