--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <h1>HAPPY</h1>
 
-        <h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+        <h3>WRITTEN BY <strong></strong>PHARRELL WILLIAMS</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
 
